--- a/folder.twig
+++ b/folder.twig
@@ -40,9 +40,18 @@
 
 	{% elseif item.contains == 'posts' %}
 
+		<!-- SET THE DATA FOR PAGINATION -->
+
+		{% set pagesize = 10 %}
+		{% set pages = ( item.folderContent|length / pagesize)|round(0, 'ceil') %}
+		{% set currentpage = currentpage ? currentpage : 1 %}
+		{% set currentposts = (currentpage - 1) * pagesize %} 
+
+		<!-- SHOW LIST ACCORDING TO THE PAGINATION -->
+
 		<ul>
 
-			{% for element in item.folderContent %}
+			{% for element in item.folderContent|slice(currentposts, pagesize) %}
 
 				{% set post = getPageMeta(settings, element) %}
 				{% set date = element.order[0:4] ~ '-' ~ element.order[4:2] ~ '-' ~ element.order[6:2] %}
@@ -56,6 +65,21 @@
 			{% endfor %}
 			
 		</ul>
+
+		<!-- DISPLAY THE PAGINATION -->
+
+		{% if pages > 1 %}
+			<hr class="mv4">
+			<p>Page: 
+				{% for i in 1 .. pages %}
+					{% if i == currentpage %}
+						{{i}}
+					{% else %}
+						<a class="page" href="{{ item.urlAbs }}/p/{{i}}">{{i}}</a>
+					{% endif %}
+				{% endfor %}
+			</p>
+		{% endif %
 
 	{% endif %}	
 
